# cs234-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
grid_world_env/: __init__.py  eval_dqn.py  eval_ppo.py  experiment1.py  experiment2.py  plot_behavioral_hiding.py  plot_combined_analysis.py  plot_parametric_comparison.py  plot_parametric_rlhf.py  plot_rlhf.py  reward_model.py  rlhf_reward_wrapper.py  run_env.py  run_rlhf_seeds.py  simulated_teacher.py  train_behavioral_hiding.py  train_dqn.py  train_dqn_scratch.py  train_parametric_rlhf.py  train_ppo.py  train_ppo_scratch.py  train_rlhf.py
grid_world_env/envs/: __init__.py  grid_world.py
grid_world_env/logs/: seed1_reached_max_episodes.txt  seed2_reached_terminal_state_twice
grid_world_env/rlhf/: __init__.py  ground_truth.py  parametric_reward_model.py  preference_data.py
grid_world_env/tests/: test_behavioral_hiding.py  test_dqn.py
grid_world_env/wrappers/: __init__.py  eval_flag.py  fully_observable.py  relative_position.py
models/: r0s1_r0t100_r1s-1_r1t100_g0.99  r0s1_r0t100_r1s-1_r1t100_g0.999  r0s1_r0t30_r1s-1_r1t30_ent0.05  r0s1_r0t30_r1s-1_r1t30_ent0.05_clip0.5
models/rlhf/: results.json  reward_model_round1.pt  reward_model_round2.pt  reward_model_round3.pt
models/rlhf_multiseed/: all_results.json
models/rlhf_multiseed/seed_0/: results.json  reward_model_round1.pt  reward_model_round2.pt  reward_model_round3.pt
models/rlhf_multiseed/seed_1/: results.json  (+3 more)
models/rlhf_single_goal/: results.json  reward_model_round1.pt  reward_model_round2.pt  reward_model_round3.pt
(+12 files in other folders)
