[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grid_world_env"]

[project]
name = "grid_world_env"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "pre-commit",
  "stable-baselines3",
  "sb3-contrib",
  "tensorboard",
]
